# rank_server

./: .env  .env.master.example  .env.slave.example  Cargo.toml  README.md  api_test.http  build.rs  rustfmt.toml
.sqlx/: query-d51a1546d95ae635c1b81eaadbe22e8182436c9e30b0ee4998e53652c50626c1.json
migrations/: 0001_rank_server.sql
proto/: update_rank_config.proto
src/: main.rs
src/config/: parameter.rs
src/db/: axredis.rs  database.rs  mod.rs
src/dto/: mod.rs  rank_dto.rs  user_dto.rs
src/error/: api_error.rs  db_error.rs  error_code.rs  mod.rs  request_error.rs  token_error.rs  user_error.rs
src/handler/: auth_handler.rs  mod.rs  profile_handler.rs  rank_handler.rs  register_handler.rs
src/middleware/: auth.rs  body_signature.rs  mod.rs
src/model/: user.rs
src/pb/: mod.rs  update_rank_config.rs
src/repository/: mod.rs  rank_repository.rs  user_repository.rs
src/response/: api_response.rs
src/routes/: mod.rs  rank.rs  root.rs
src/service/: mod.rs  rank_config_service.rs  rank_service.rs  token_service.rs  user_service.rs
src/state/: auth_state.rs  mod.rs  rank_config_state.rs  rank_state.rs  token_state.rs  user_state.rs
src/utils/: encrypt.rs
